--- a/DovizProje/DovizProje.csproj
+++ b/DovizProje/DovizProje.csproj
@@ -177,6 +177,9 @@
     <EmbeddedResource Include="GunlukPanoGuncellemeForm.resx">
       <DependentUpon>GunlukPanoGuncellemeForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MevcutKurlarForm.resx">
+      <DependentUpon>MevcutKurlarForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MusterilerForm.resx">
       <DependentUpon>MusterilerForm.cs</DependentUpon>
     </EmbeddedResource>
